--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
   <link href="home.css" rel="stylesheet" type="text/css" />
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Me.GPT</a>
+  <a href = "fitness.html" class="button"> Fitness Dashboard</a>
  
 </head>
 
