created and connected fitness.js with time date logic

--- a/fitness.html
+++ b/fitness.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div id="timeD"> </div>
+  <p id="currentDate"></p>
+  <p> placeholder (this will add to csv)</p>
+
     <h1>Log todays workout</h1>
     <menu> choose day</menu>
     <section></section>
@@ -20,4 +24,5 @@
   <input type="file" accept="image/*" capture>
 </body>
 
+<scirpt src="logic/fitness.js"> </scirpt>
 </html>
