--- a/fitness.html
+++ b/fitness.html
@@ -20,9 +20,11 @@
         <!-- Exercise Menu -->
         <label for="exerciseMenu">Select Exercise:</label>
         <select id="exerciseMenu">
-            <option value="squats">Squats</option>
-            <option value="benchPress">Bench Press</option>
-            <option value="deadlift">Deadlift</option>
+            <option value="push">Push</option>
+            <option value="pull">Pull</option>
+            <option value="legs">Legs</option>
+            <option value= "arms"> Arms</option>
+            <option value = "general"> General</option>
         </select>
     </div>
     
@@ -40,10 +42,12 @@
         <label for="notes">Notes:</label>
         <textarea id="notes" rows="4" cols="50" placeholder="Any additional notes..."></textarea>
     </div>
-    
+
+    <div id="exerciseData"></div>
+
   <h2> Upload your image !</h2>
   <input type="file" accept="image/*" capture>
 </body>
 
-<scirpt src="logic/fitness.js"> </scirpt>
+<scirpt src="logic/fitness.js"></scirpt>
 </html>
