dynamic render of exercise data

--- a/fitness.html
+++ b/fitness.html
@@ -27,6 +27,9 @@
             <option value = "general"> General</option>
         </select>
     </div>
+
+    <div id="displayArea"></div> <!-- Where exercises will be shown -->
+
     
     <div>
         <!-- Inputs for Reps and Weight -->
