--- a/fitness.html
+++ b/fitness.html
@@ -7,6 +7,8 @@
   <title>Personal site</title>
   <link href="home.css" rel="stylesheet" type="text/css" />
   <a href="home.html" class="button">Home</a>
+  <a href="index.html" class="button">Personal LLM</a>
+  <a href = "fitness.html" class="button"> Fitness Dashboard</a>
  
 </head>
 
@@ -30,7 +32,10 @@
 
     <div id="displayArea"></div> <!-- Where exercises will be shown -->
 
-    
+    <br>
+    <br>
+    <br>
+    <br>
     <div>
         <!-- Inputs for Reps and Weight -->
         <label for="reps">Reps:</label>
