fix typo and add logging

--- a/fitness.html
+++ b/fitness.html
@@ -57,5 +57,5 @@
   <input type="file" accept="image/*" capture>
 </body>
 
-<scirpt src="logic/fitness.js"></scirpt>
+<script src="logic/fitness.js"></script>
 </html>
