--- a/fitness.html
+++ b/fitness.html
@@ -6,6 +6,7 @@
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
   <link href="home.css" rel="stylesheet" type="text/css" />
+  <h1> "    "</h1>
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Personal LLM</a>
   <a href = "fitness.html" class="button"> Fitness Dashboard</a>
@@ -13,9 +14,10 @@
 </head>
 
 <body>
+  <br>
   <div id="timeD"> </div>
   <p id="currentDate"></p>
-  <p> placeholder (this will add to csv)</p>
+
 
     <h1>Log todays workout</h1>
  <div>
@@ -28,7 +30,9 @@
             <option value= "arms"> Arms</option>
             <option value = "general"> General</option>
         </select>
-    </div>
+        <button id="submitExercise">Submit</button> <!-- Submit button -->
+  </div>
+ 
 
     <div id="displayArea"></div> <!-- Where exercises will be shown -->
 
