--- a/fitness.html
+++ b/fitness.html
@@ -24,13 +24,13 @@
         <!-- Exercise Menu -->
         <label for="exerciseMenu">Select Exercise:</label>
         <select id="exerciseMenu">
-            <option value="push">Push</option>
-            <option value="pull">Pull</option>
-            <option value="legs">Legs</option>
-            <option value= "arms"> Arms</option>
-            <option value = "general"> General</option>
+            <option value="Push">Push</option>
+            <option value="Pull">Pull</option>
+            <option value="Legs">Legs</option>
+            <option value= "Arms"> Arms</option>
+            <option value = "General"> General</option>
         </select>
-        <button id="submitExercise">Submit</button> <!-- Submit button -->
+        <button id="submitButton">Select</button> <!-- Submit button -->
   </div>
  
 
@@ -56,6 +56,7 @@
     </div>
 
     <div id="exerciseData"></div>
+  <div id = "displayArea"></div>
 
   <h2> Upload your image !</h2>
   <input type="file" accept="image/*" capture>
