add uncommited work

--- a/fitness.html
+++ b/fitness.html
@@ -56,8 +56,8 @@
     </div>
 
     <div id="exerciseData"></div>
-
-  <h2> Upload your image !</h2>
+  <h2> Log todays Meals</h2>
+  <h3> Take a picture of a meal </h3>
   <input type="file" accept="image/*" capture>
 </body>
 
