--- a/fitness.html
+++ b/fitness.html
@@ -42,6 +42,15 @@
     <br>
     <div>
         <!-- Inputs for Reps and Weight -->
+        <label for="exerciseSubMenu"> Select Exercise</label>
+        <select id="exerciseMenu">
+          <option value="Push">Push</option>
+          <option value="Pull">Pull</option>
+          <option value="Legs">Legs</option>
+          <option value= "Arms"> Arms</option>
+          <option value = "General"> General</option>
+      </select>
+
         <label for="reps">Reps:</label>
         <input type="number" id="reps" placeholder="Number of Reps">
         
