--- a/fitness.html
+++ b/fitness.html
@@ -56,6 +56,7 @@
         
         <label for="weight">Weight:</label>
         <input type="number" id="weight" placeholder="Weight Used">
+        <button id="submitButton">Submit</button> 
     </div>
     
     <div>
