--- a/fitness.html
+++ b/fitness.html
@@ -6,10 +6,11 @@
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
   <link href="home.css" rel="stylesheet" type="text/css" />
-  <h1> "    "</h1>
+  
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Personal LLM</a>
   <a href = "fitness.html" class="button"> Fitness Dashboard</a>
+  <a href="/pages/exercisedata.html" class="button"> View Logs</a>
  
 </head>
 
@@ -56,7 +57,7 @@
         
         <label for="weight">Weight:</label>
         <input type="number" id="weight" placeholder="Weight Used">
-        <button id="submitButton">Submit</button> 
+        <button id="submitButtonSub">Submit</button> 
     </div>
     
     <div>
