fix buggy llm page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
 		<a href="home.html" class="button">Home</a>
 		<a href="index.html" class="button">Me.GPT</a>
-	    	<a href="testing.html" class ="button"> Testing
+	    	<a href="testing.html" class ="button"> Testing>
 
         <h1>Me.GPT</h1>
 		<br>
@@ -24,8 +24,8 @@
 	
 	<form action="">
 		<input type="text" name="message" id="message" placeholder="Ask me anything !">
-		<button type="submit" >Send</button>
 	</form>
+	<button type="submit" >Send</button>
 		
 		<div id="chat-log">
 
