--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -6,6 +6,7 @@
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
   <link href="home.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="style.css">
   
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Personal LLM</a>
