--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
-  <link href="home.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="style.css">
+  <link href="../home.css" rel="stylesheet" type="text/css" />
   
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Personal LLM</a>
@@ -45,7 +44,7 @@
     <div>
         <!-- Inputs for Reps and Weight -->
         <label for="exerciseSubMenu"> Select Exercise</label>
-        <select id="exerciseMenu">
+        <select id="exerciseSubMenu">
           <option value="Push">Push</option>
           <option value="Pull">Pull</option>
           <option value="Legs">Legs</option>
