--- a/pages/exerciseData.html
+++ b/pages/exerciseData.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
-  <link href="home.css" rel="stylesheet" type="text/css" />
+  <link href="../home.css rel="stylesheet" type="text/css" />
   <a href="home.html" class="button">Home</a>
  
 </head>
