--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -7,8 +7,8 @@
   <title>Personal site</title>
   <link href="../home.css" rel="stylesheet" type="text/css" />
   
-  <a href="home.html" class="button">Home</a>
-  <a href="index.html" class="button">Personal LLM</a>
+  <a href="../home.html" class="button">Home</a>
+  <a href="../index.html" class="button">Personal LLM</a>
   <a href = "fitness.html" class="button"> Fitness Dashboard</a>
   <a href="/pages/exercisedata.html" class="button"> View Logs</a>
  
@@ -31,7 +31,7 @@
             <option value= "Arms"> Arms</option>
             <option value = "General"> General</option>
         </select>
-        <button id="submitButton">Select</button> <!-- Submit button -->
+        <button id="submitExercise">Select</button> <!-- Submit button -->
   </div>
  
 
@@ -44,13 +44,7 @@
     <div>
         <!-- Inputs for Reps and Weight -->
         <label for="exerciseSubMenu"> Select Exercise</label>
-        <select id="exerciseSubMenu">
-          <option value="Push">Push</option>
-          <option value="Pull">Pull</option>
-          <option value="Legs">Legs</option>
-          <option value= "Arms"> Arms</option>
-          <option value = "General"> General</option>
-      </select>
+        <select id="exerciseSubMenu"></select>
 
         <label for="reps">Reps:</label>
         <input type="number" id="reps" placeholder="Number of Reps">
