--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
 		<a href="home.html" class="button">Home</a>
 		<a href="index.html" class="button">Me.GPT</a>
-	    	<a href="testing.html" class ="button"> Testing>
+	    	<a href="testing.html" class ="button"> Testing </a>
 
         <h1>Me.GPT</h1>
 		<br>
