--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -61,7 +61,7 @@
     </div>
 
     <div id="exerciseData"></div>
-  <div id = "displayArea"></div>
+  <div id = "displayArea1"></div>
  <h2> Log todays Meals</h2>
   <h3> Take a picture of a meal </h3>
   <input type="file" accept="image/*" capture>
