try to fix button

--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -7,14 +7,16 @@
   <title>Personal site</title>
   <link href="../home.css" rel="stylesheet" type="text/css" />
   
-  <a href="../home.html" class="button">Home</a>
-  <a href="../index.html" class="button">Personal LLM</a>
-  <a href = "fitness.html" class="button"> Fitness Dashboard</a>
-  <a href="/pages/exercisedata.html" class="button"> View Logs</a>
+
  
 </head>
 
 <body>
+  <a href="../home.html" class="button">Home</a>
+  <a href="../index.html" class="button">Personal LLM</a>
+  <a href = "fitness.html" class="button"> Fitness Dashboard</a>
+  <a href="/pages/exercisedata.html" class="button"> View Logs</a>
+
   <br>
   <div id="timeD"> </div>
   <p id="currentDate"></p>
@@ -25,13 +27,13 @@
         <!-- Exercise Menu -->
         <label for="exerciseMenu">Select Exercise:</label>
         <select id="exerciseMenu">
-            <option value="Push">Push</option>
-            <option value="Pull">Pull</option>
-            <option value="Legs">Legs</option>
+            <option value="push">Push</option>
+            <option value="pull">Pull</option>
+            <option value="legs">Legs</option>
             <option value= "Arms"> Arms</option>
             <option value = "General"> General</option>
         </select>
-        <button id="submitExercise">Select</button> <!-- Submit button -->
+        <button id="submitButton">Select</button> <!-- Submit button -->
   </div>
  
 
