fix broken path

--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -59,12 +59,18 @@
     <div>
         <!-- Textbox for Notes -->
         <label for="notes">Notes:</label>
-        <textarea id="notes" rows="4" cols="50" placeholder="Any additional notes..."></textarea>
+        <textarea id="notes" rows="4" cols="20" placeholder="Any additional notes..."></textarea>
     </div>
 
     <div id="exerciseData"></div>
   <div id = "displayArea1"></div>
  <h2> Log todays Meals</h2>
+  <label for="meal"> Meal : </label>
+  <textarea id="meal" rows="4" cols="10" placeholder="Meal name"></textarea>
+  <label for="protein"> Protein :</label>
+  <textarea id="protein" rows="4" cols="10" placeholder="Protein"></textarea>
+  <label for="calories"> calories </label>
+  <textarea id="calories" rows="4" cols="10" placeholder="calories"></textarea>
   <h3> Take a picture of a meal </h3>
   <input type="file" accept="image/*" capture>
 </body>
