--- a/testing.html
+++ b/testing.html
@@ -7,7 +7,7 @@
   <title>Personal site</title>
   <link href="home.css" rel="stylesheet" type="text/css" />
   <a href="home.html" class="button">Home</a>
-  <a href="fitnessrb.html" class="button">Roll Backs </a>
+  <a href="/pages/fitnessrb.html" class="button">Roll Backs </a>
  
 </head>
 
