--- a/pages/fitnessrb.html
+++ b/pages/fitnessrb.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal site</title>
-  <link href="..home.css" rel="stylesheet" type="text/css" />
-  <h1> "    "</h1>
+  <link href="../home.css" rel="stylesheet" type="text/css" >
   <a href="home.html" class="button">Home</a>
   <a href="index.html" class="button">Personal LLM</a>
   <a href = "fitness.html" class="button"> Fitness Dashboard</a>
@@ -56,7 +55,6 @@
     </div>
 
     <div id="exerciseData"></div>
-  <div id = "displayArea"></div>
 
   <h2> Upload your image !</h2>
   <input type="file" accept="image/*" capture>
