add buttons + console logs

--- a/pages/fitness.html
+++ b/pages/fitness.html
@@ -71,8 +71,10 @@
   <textarea id="protein" rows="4" cols="1" placeholder="Protein"></textarea>
   <label for="calories"> calories </label>
   <textarea id="calories" rows="4" cols="1" placeholder="calories"></textarea>
+  <button id="addMealButton">Add meal</button> 
   <h3> Take a picture of a meal </h3>
   <input type="file" accept="image/*" capture>
+  <button id="uploadImageButton">Upload Image</button> 
 </body>
 
 <script src="logic/fitness.js"></script>
